[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/gui.gd" type="Script" id=1]

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GPanel" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameMenus" type="HBoxContainer" parent="GPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 3.0
margin_top = -10.0
margin_right = 166.0
margin_bottom = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLbl" type="Label" parent="GPanel/GameMenus"]
margin_top = 3.0
margin_right = 9.0
margin_bottom = 17.0
text = "#"

[node name="GameSpeed" type="MenuButton" parent="GPanel/GameMenus"]
margin_left = 13.0
margin_right = 106.0
margin_bottom = 20.0
text = "Game Speed"
items = [ "Slow", null, 0, false, false, 0, 0, null, "", false, "Medium", null, 0, false, false, 1, 0, null, "", false, "Fast", null, 0, false, false, 2, 0, null, "", false ]

[node name="Disasters" type="MenuButton" parent="GPanel/GameMenus"]
margin_left = 110.0
margin_right = 182.0
margin_bottom = 20.0
text = "Disasters"

[node name="GameStatus" type="HBoxContainer" parent="GPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -276.0
margin_top = -9.5
margin_right = -4.0
margin_bottom = 10.5
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YearLbl" type="Label" parent="GPanel/GameStatus"]
margin_left = 193.0
margin_top = 3.0
margin_right = 200.0
margin_bottom = 17.0
text = "Y"

[node name="YearNumLbl" type="Label" parent="GPanel/GameStatus"]
margin_left = 204.0
margin_top = 3.0
margin_right = 212.0
margin_bottom = 17.0
text = "1"

[node name="QuaterLbl" type="Label" parent="GPanel/GameStatus"]
margin_left = 216.0
margin_top = 3.0
margin_right = 227.0
margin_bottom = 17.0
text = "Q"

[node name="QuaterNumLbl" type="Label" parent="GPanel/GameStatus"]
margin_left = 231.0
margin_top = 3.0
margin_right = 239.0
margin_bottom = 17.0
text = "1"

[node name="VSeparator" type="VSeparator" parent="GPanel/GameStatus"]
margin_left = 243.0
margin_right = 247.0
margin_bottom = 20.0

[node name="CurrencyLbl" type="Label" parent="GPanel/GameStatus"]
margin_left = 251.0
margin_top = 3.0
margin_right = 259.0
margin_bottom = 17.0
text = "$"

[node name="MoneyLbl" type="Label" parent="GPanel/GameStatus"]
margin_left = 263.0
margin_top = 3.0
margin_right = 272.0
margin_bottom = 17.0
text = "#"

[node name="DebugBtn" type="Button" parent="GPanel"]
visible = false
margin_left = 932.754
margin_top = 563.202
margin_right = 985.754
margin_bottom = 583.202
text = "Debug"

[node name="WelcomeDlg" type="AcceptDialog" parent="."]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.5
margin_top = -69.0
margin_right = 131.5
margin_bottom = 69.0
window_title = "Welcome to Elecoms"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WelcomeLbl" type="RichTextLabel" parent="WelcomeDlg"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -123.5
margin_top = 8.0
margin_right = 123.5
margin_bottom = 102.0
text = "Elecoms Corp. has invited you to build their next regional HQ. You've been given creative liberty over the design as long you assign an office to them."
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="confirmed" from="WelcomeDlg" to="." method="_on_WelcomeDlg_confirmed"]
